--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             // Удаление слоев (Пробки, Слои)
             myMap.controls.remove('trafficControl');  // Убираем пробки
-            myMap.controls.remove('layerSwitcher');   // Убираем слои
+            myMap.controls.remove('layerSwitcher');   // Убираем слой "Слои"
 
             // Центрирование поиска по текущему положению карты
             const searchControl = new ymaps.control.SearchControl({
