--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
         function init() {
             const myMap = new ymaps.Map("map", {
                 center: [55.76, 37.64], // Москва по умолчанию
-                zoom: 5
-            });
+                zoom: 5,
+                controls: []
+            },
+                {suppressMapOpenBlock: true}),
+            );
 
             // Удаление слоев (Пробки, Слои)
             myMap.controls.remove('trafficControl');  // Убираем пробки
