--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                 center: [55.76, 37.64], // Москва по умолчанию
                 zoom: 5,
                 controls: []
+            }, {
+                suppressMapOpenBlock: true,
             });
 
             // Удаление слоев (Пробки, Слои)
