--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             const myMap = new ymaps.Map("map", {
                 center: [55.76, 37.64], // Москва по умолчанию
                 zoom: 5,
-                controls: []
+                controls: ['zoomControl']
             }, {
                 suppressMapOpenBlock: true,
             });
