--- a/index.html
+++ b/index.html
@@ -93,19 +93,15 @@
             const myMap = new ymaps.Map("map", {
                 center: [55.76, 37.64], // Москва по умолчанию
                 zoom: 5,
-                controls: ['zoomControl']
+                controls: []
             }, {
                 suppressMapOpenBlock: true,
             });
 
-            // Удаление слоев (Пробки, Слои)
-            myMap.controls.remove('trafficControl');  // Убираем пробки
-            myMap.controls.remove('layerSwitcher');   // Убираем слой "Слои"
-
             // Центрирование поиска по текущему положению карты
             const searchControl = new ymaps.control.SearchControl({
                 options: {
-                    float: 'right',
+                    float: 'center',
                     provider: 'yandex#map',
                     size: 'large',
                     useMapBounds: true // Используем текущие границы карты для поиска
