--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             // Центрирование поиска по текущему положению карты
             const searchControl = new ymaps.control.SearchControl({
                 options: {
-                    float: 'center',
+                    float: 'right',
                     provider: 'yandex#map',
                     size: 'large',
                     useMapBounds: true // Используем текущие границы карты для поиска
